Getting to draw

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>Falling demo</h1>
+    <canvas id="d"></canvas>
     <script src="/app.js"></script>
   </body>
 </html>
