--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>Falling demo</h1>
-    <canvas id="d"></canvas>
-    <script src="/app.js"></script>
+    <canvas id="d" width="600" height="600" style="border: 1px solid black; display: block; margin: auto;"></canvas>
+    <script src="dist/Main.js"></script>
   </body>
 </html>
